# Lidar_Only_Cpp

./: README.md  classify_left_right.cpp  cone_model.onnx  model_training.py  point_level_data_2.csv  preprocessing.py  train_model.py  z_binned_data.csv  z_checker.py
install/: local_setup.sh  setup.sh
install/lidar_only_cpp/lib/lidar_only_cpp/: data_extractor_node
install/lidar_only_cpp/share/ament_index/resource_index/package_run_dependencies/: lidar_only_cpp
install/lidar_only_cpp/share/lidar_only_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my-test-package/share/my-test-package/: package.sh
log/: latest_build
src/lidar_only_cpp/: CMakeLists.txt  package.xml
src/lidar_only_cpp/models/: model.onnx  scaler_params.txt
src/lidar_only_cpp/src/: data_extractor_node.cpp
